classify by color distance

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -9,6 +9,8 @@
         <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
         <p>Always a pleasure scaffolding your apps.</p>
         <p><a class="button radius" ng-href="#">Splendid!</a></p>
+        <ul id="tracks">
+        </ul>
       </div>
     </div>
   </div>
