--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,16 +5,16 @@
   padding: 0.2em 0;
 }
 
-.panel {
-  margin-top: 50px;
+.menu-icon {
+  background: none;
+  border: none;
+  margin-right: 16px;
 }
 
-.th {
-  width: 100%;
-  height: 200px;
-
-  img.right {
-    width: 50px;
+.color {
+  display: block;
+  &.active {
+    background: red;
   }
 }
 // injector
