--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -12,10 +12,25 @@
 }
 
 .color {
+  background: none;
+  border-width: 0;
+  cursor: pointer;
   display: block;
-  &.active {
-    background: red;
-  }
+  color: #333;
+  font-size: inherit;
+  line-height: 40px;
+  max-height: 40px;
+  opacity: 1;
+  margin: 0;
+  outline: none;
+  padding: 0px 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  width: 100%;
+  z-index: 1;
+  transition: 0.45s cubic-bezier(0.35, 0, 0.25, 1);
+  transition-property: max-height, background-color, opacity;
 }
 // injector
 // endinjector
