--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -32,5 +32,28 @@
   transition: 0.45s cubic-bezier(0.35, 0, 0.25, 1);
   transition-property: max-height, background-color, opacity;
 }
+
+.album {
+  max-width: 700px;
+  min-width: 600px;
+  min-height: 500px;
+  text-align: center;
+  font-family: 'NTR';
+
+  .title {
+    margin: 0;
+    line-height: 1.2;
+  }
+
+  .artist-name {
+    margin: 0.1em;
+  }
+
+  .release-date {
+    margin: 5px;
+    color: #999;
+    line-height: 1.2;
+  }
+}
 // injector
 // endinjector
