--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,8 +1,8 @@
 <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-sm')" tabindex="-1" >
   <md-toolbar class="md-default-theme">
-    <h1 class="md-toolbar-tools">color</h1>
+    <h1 class="md-toolbar-tools text">Colors</h1>
   </md-toolbar>
-  <md-content flex class="md-default-theme" ng-controller="MenuCtrl">
+  <md-content flex class="md-default-theme sidebar" ng-controller="MenuCtrl">
     <div>
       <a
       class="color"
@@ -30,7 +30,7 @@
       </button>
       <div layout="row" flex layout-align="end center">
         <div class="md-toolbar-item md-breadcrumb">
-          <span>App name</span>
+          <span class="text">Discover new release by artwork color</span>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
     </ul> -->
 
 
-  <md-content md-scroll-y flex class="md-padding md-default-theme">
+  <md-content md-scroll-y flex class="md-padding md-default-theme main" >
 
     <div layout="column" layout-fill layout-align="center center" class="layout-content layout-options">
       <!-- <md-progress-circular flex class="md-hue-2" md-mode="indeterminate"></md-progress-circular> -->
@@ -56,12 +56,13 @@
         <md-item ng-repeat="album in albums">
           <md-item-cotent>
             <md-card>
-              <md-card-content>
-                <h2>{{ album.title }}</h2>
-                <h3>{{ album.artist }}</h3>
-                <time>{{ album.releaseDate }}</time>
-                <p>{{ album.timestamp }}</p>
-                <img ng-src="{{ album.artwork }}" />
+              <md-card-content class='album'>
+                <h2 class="title">{{ album.title }}</h2>
+                <p class="release-date"><time>{{ album.releaseDate | date:'yyyy-MM-dd'}}</time></p>
+                <a ng-href="{{album.link}}"  target="_blank">
+                  <img ng-src="{{ album.artwork }}" />
+                </a>
+                <h3 class="artist-name">{{ album.artist }}</h3>
               </md-card-content>
             </md-card>
           </md-item-cotent>
