web font timeout and fallback

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -49,7 +49,7 @@
 
 .album {
   text-align: center;
-  font-family: 'NTR';
+  font-family: 'NTR', Tahoma, Geneva, sans-serif;
 
   .title {
     margin: 0;
