remove web font

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -50,7 +50,7 @@
 
 .album {
   text-align: center;
-  font-family: 'NTR', Tahoma, Geneva, sans-serif;
+  font-family: Tahoma, Geneva, sans-serif;
 
   .title {
     margin: 0;
