--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,4 @@
-<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-sm')" tabindex="-1" >
+<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2 sidenav" md-component-id="left" md-is-locked-open="$media('gt-sm')" tabindex="-1" >
   <md-toolbar class="md-default-theme">
     <h1 class="md-toolbar-tools text">Colors</h1>
   </md-toolbar>
