swipe to toggle sidenav

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,5 @@
-<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2 sidenav" md-component-id="left" md-is-locked-open="$media('gt-sm')" tabindex="-1" >
+<section layout="row" layout-fill md-swipe-left="toggleMenu()" md-swipe-right="toggleMenu()">
+  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2 sidenav" md-component-id="left" md-is-locked-open="$media('gt-sm')" tabindex="-1" >
   <md-toolbar class="md-default-theme">
     <h1 class="md-toolbar-tools text">Colors</h1>
   </md-toolbar>
@@ -23,7 +24,7 @@
 
 <div layout="column" layout-fill tab-index="-1" role="main">
   <md-toolbar class="md-default-theme">
-    <div class="md-toolbar-tools" ng-click="openMenu()" tabindex="0">
+    <div class="md-toolbar-tools" ng-click="toggleMenu()" tabindex="0">
       <button class="menu-icon" hide-gt-sm aria-label="Toggle Menu">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
           <g id="Header">
@@ -78,3 +79,4 @@
     </div>
   </md-content>
 </div>
+</section>
